--- a/output/index.html
+++ b/output/index.html
@@ -10,14 +10,41 @@
 </head>
 <body>
     <nav class="navbar bg-dark">
-        <span class="navbar-brand mb-0 h1 w-100 text-center">Our Team</span>
+        <span class="navbar-brand mb-0 h1 w-100 text-center">Acme Inc. Team Profile</span>
     </nav>
     <div class="container">
         <div class="row"><div class="col-6">
-
+        <div class="card mx-auto mb-5" style="width: 24rem">
+        <h3 class="card-header">Eldridge Holmes<br>Facility Manager</h3>
+        <ul class="list-group">
+            <li class="ulListItem">Employee ID: 3</li>
+            <li class="ulListIten">Employee Email: eldridgeholmes@gmail.com</li>
+            <li class="ulListItem">Employee Phone:1-800-615-3767</li>
+        </ul>
+        </div>      
+    </div>
+        <div class="row"><div class="col-6">
+        <div class="card mx-auto mb-5" style="width: 24rem">
+        <h3 class="card-header">Brian Eno<br>Reverse Logistics Engineer</h3>
+        <ul class="list-group">
+            <li class="ulListItem">Employee ID: 2</li>
+            <li class="ulListItem">Employee Email: brianeno@gmail.com</li>
+            <li class="ulListItem">Employee Phone: 1-800-615-3979</li>
+        </ul>
         </div>
-
+    </div>
+        <div class="row"><div class="col-6">
+        <h3 class="card mx-auto mb-5" style="width: 24rem"><br>Sale Intern</h3>
+        <ul class="list-group">
+            <li class="ulListItem">Employee ID: 5</li>
+            <li class="ulListItem">Empoyee Email: bunkjohnson@email.com</li>
+            <li class="ulListItem">Employee Phone: 1-800-615-3268</li>
+        </ul>
         </div>
+    </div>
+        </div>
+       </div>
+      </div>
     </div>
     
 </body>
