--- a/output/index.html
+++ b/output/index.html
@@ -34,11 +34,13 @@
         </div>
     </div>
         <div class="row"><div class="col-6">
-        <h3 class="card mx-auto mb-5" style="width: 24rem"><br>Sale Intern</h3>
+        <div class="card mx-auto mb-5" style="width: 24rem">
+        <h3 class="card-header">Bunk Johnson<br>Sales Intern</div>
         <ul class="list-group">
             <li class="ulListItem">Employee ID: 5</li>
             <li class="ulListItem">Empoyee Email: bunkjohnson@email.com</li>
-            <li class="ulListItem">Employee Phone: 1-800-615-3268</li>
+            <li class="ulListItem">Employee School: TSU</li>
+            
         </ul>
         </div>
     </div>
