app is fully functional. appearance of HTML file is not ideal and links within it are non-active

--- a/output/index.html
+++ b/output/index.html
@@ -4,22 +4,53 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" 
-        crossorigin="anonymous" link rel="stylesheet">
-        <title>Acme Inc. Team Profile</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <title>C&M Music Shop</title>
     </head>
     <body>
-        <nav class="navbar bg-dark">
-            <span class="navbar-brand mb-0 h1 w-100 text-center">Acme Inc. Team Profile</span>
+        <nav class="navbar">
+            <span class="navbar-brand mb-0 h1 w-100 text-center">C&M Music Shop ~ Rampart Street ~ New Orelans</span>
         </nav>
         <div class="container">
-            <div class="row"><div class="col-6">
-            <div class="card mx-auto mb-5" style="width: 24rem">
+            <div class="row"><div class="col-8">
+            <div class="card mx-auto" style="width: 15rem">
             <h3 class="card-header">Wardell Quezergue<br>Reverse Logistics Engineer</h3>
             <ul class="list-group">
-                <li class="ulListItem">Employee ID: 4</li>
-                <li class="ulListItem">Employee Email: wardell@quezerguemail.com</li>
+                <li class="ulListItem">Employee ID: 2</li>
+                <li class="ulListItem">Employee Email: wardell@candm.com</li>
                 <li class="ulListItem">Employee GitHub: pwkinsley87</li>
             </ul>
             </div>
-        </div>
+        </div><div class="col-6">
+            <div class="card mx-auto" style="width: 15rem">
+            <h3 class="card-header">Cosimo Matassa<br>Facility Manager</h3>
+            <ul class="list-group">
+                <li class="ulListItem">Employee ID: 1</li>
+                <li class="ulListIten">Employee Email: cosimo@candm.com</li>
+                <li class="ulListItem">Office Phone: 1-800-615-3767</li>
+            </ul>
+            </div>      
+        </div><div class="col-6">
+            <div class="card mx-auto" style="width: 15rem">
+            <h3 class="card-header">Eldridge Holmes<br>Sales Intern</div>
+            <ul class="list-group">
+                <li class="ulListItem">Employee ID: 3</li>
+                <li class="ulListItem">Empoyee Email: eldridge@candm.com</li>
+                <li class="ulListItem">Employee School: TSU</li>
+                
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-5" style="width: 24rem">
+            <h3 class="card-header">Mac Rebennack<br>Sales Intern</div>
+            <ul class="list-group">
+                <li class="ulListItem">Employee ID: 3</li>
+                <li class="ulListItem">Empoyee Email: mac@candm.com</li>
+                <li class="ulListItem">Employee School: TSU</li>
+                
+            </ul>
+            </div>
+        </div> </div>
+     </div>
+</body>
+</html> 
